--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Eye Sight AI</title>
 
+  <!-- 
+  
+    Project: EYE SIGHT AI
+  Author: Haseef Muhammed PC
+  Website: https://haseefmuhammed.netlify.app
+  License: Custom MIT-based — Personal and Educational Use Only
+  
+  -->
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
